disabled keyboard on active result display

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           type="text"
           id="result"
           placeholder="Get your password from here"
+          readonly
         />
         <button class="copy">
           <span>
